What's New in IDLE 3.10.z
after 3.10.0 until 3.10.?
Released on 2022-05-16
=========================


bpo-46630: Make query dialogs on Windows start with a cursor in the
entry box.

bpo-46591: Make the IDLE doc URL on the About IDLE dialog clickable.

bpo-45296: Clarify close, quit, and exit in IDLE.  In the File menu,
'Close' and 'Exit' are now 'Close Window' (the current one) and 'Exit'
is now 'Exit IDLE' (by closing all windows).  In Shell, 'quit()' and
'exit()' mean 'close Shell'.  If there are no other windows,
this also exits IDLE.

bpo-45495: Add context keywords 'case' and 'match' to completions list.

bpo-45296: On Windows, change exit/quit message to suggest Ctrl-D, which
works, instead of <Ctrl-Z Return>, which does not work in IDLE.


What's New in IDLE 3.10.0
(since 3.9.0)
Released on 2021-10-04
=========================


bpo-40128: Mostly fix completions on macOS when not using tcl/tk 8.6.11
(as with 3.9).

bpo-33962: Move the indent space setting from the Font tab to the new Windows
tab. Patch by Mark Roseman and Terry Jan Reedy.

bpo-40468: Split the settings dialog General tab into Windows and Shell/Ed
tabs. Move help sources, which extend the Help menu, to the Extensions tab.
Make space for new options and shorten the dialog. The latter makes the
dialog better fit small screens.

bpo-44010: Highlight the new match statement's soft keywords: match, case,
and _. This highlighting is not perfect and will be incorrect in some rare
cases, especially for some _s in case patterns.

bpo-44026: Include interpreter's typo fix suggestions in message line
for NameErrors and AttributeErrors.  Patch by E. Paine.

bpo-41611: Avoid occasional uncaught exceptions and freezing when using
completions on macOS.

bpo-37903: Add mouse actions to the shell sidebar.  Left click and
optional drag selects one or more lines of text, as with the
editor line number sidebar.  Right click after selecting text lines